venv/wandb/run-20231124_203632-nnplv693/files/output.log
{   'args': {   'logprobs': None,
                'max_tokens': 100,
                'model': 'togethercomputer/llama-2-13b',
                'prompt': 'Input:\n'
                          '0,0,5\n'
                          '0,5,0\n'
                          '5,0,0\n'
                          'Output:\n'
                          '3,3,3\n'
                          '4,4,4\n'
                          '2,2,2\n'
                          '\n'
                          'Input:\n'
                          '0,0,5\n'
                          '0,0,5\n'
                          '0,0,5\n'
                          'Output:\n'
                          '3,3,3\n'
                          '3,3,3\n'
                          '3,3,3\n'
                          '\n'
                          'Input:\n'
                          '5,0,0\n'
                          '0,5,0\n'
                          '5,0,0\n'
                          'Output:\n'
                          '2,2,2\n'
                          '4,4,4\n'
                          '2,2,2\n'
                          '\n'
                          'Input:\n'
                          '0,5,0\n'
                          '0,0,5\n'
                          '0,5,0\n'
                          'Output:\n'
                          '4,4,4\n'
                          '3,3,3\n'
                          '4,4,4\n'
                          '\n'
                          'Input:\n'
                          '0,0,5\n'
                          '5,0,0\n'
                          '0,5,0\n'
                          'Output:\n',
                'repetition_penalty': 0,
                'stop': ['\n\n'],
                'temperature': 0,
                'top_k': 50,
                'top_p': 0.7},
    'id': '82b6294f9c6b443e-EWR',
    'model': 'togethercomputer/llama-2-13b',
    'model_owner': '',
    'num_returns': 1,
    'output': {   'choices': [{'text': '3,3,3\n2,2,2\n3,3,3\n\n'}],
                  'result_type': 'language-model-inference'},
    'prompt': [   'Input:\n'
                  '0,0,5\n'
                  '0,5,0\n'
                  '5,0,0\n'
                  'Output:\n'
                  '3,3,3\n'
                  '4,4,4\n'
                  '2,2,2\n'
                  '\n'
                  'Input:\n'
                  '0,0,5\n'
                  '0,0,5\n'
                  '0,0,5\n'
                  'Output:\n'
                  '3,3,3\n'
                  '3,3,3\n'
                  '3,3,3\n'
                  '\n'
                  'Input:\n'
                  '5,0,0\n'
                  '0,5,0\n'
                  '5,0,0\n'
                  'Output:\n'
                  '2,2,2\n'
                  '4,4,4\n'
                  '2,2,2\n'
                  '\n'
                  'Input:\n'
                  '0,5,0\n'
                  '0,0,5\n'
                  '0,5,0\n'
                  'Output:\n'
                  '4,4,4\n'
                  '3,3,3\n'
                  '4,4,4\n'
                  '\n'
                  'Input:\n'
                  '0,0,5\n'
                  '5,0,0\n'
                  '0,5,0\n'
                  'Output:\n'],
    'status': 'finished',
    'subjobs': [],
    'tags': {}}
##################
3,3,3
2,2,2
3,3,3
/Users/sudharsansundar/PycharmProjects/CS221_Milestone/venv/together_eval_script.py:86: FutureWarning: load_metric is deprecated and will be removed in the next major version of datasets. Use 'evaluate.load' instead, from the new library 🤗 Evaluate: https://huggingface.co/docs/evaluate
  ted_metric = datasets.load_metric('token_edit_distance')
Using the latest cached version of the module from /Users/sudharsansundar/.cache/huggingface/modules/datasets_modules/metrics/token_edit_distance/57a97721c6d58801aa97e141e81b107f974896263f5e67b72dd40f97c424ddfe (last modified on Sat Sep  2 16:07:15 2023) since it couldn't be found locally at token_edit_distance, or remotely on the Hugging Face Hub.
Traceback (most recent call last):
  File "/Users/sudharsansundar/PycharmProjects/CS221_Milestone/venv/together_eval_script.py", line 104, in <module>
    main()
  File "/Users/sudharsansundar/PycharmProjects/CS221_Milestone/venv/together_eval_script.py", line 86, in main
    ted_metric = datasets.load_metric('token_edit_distance')
  File "/Users/sudharsansundar/PycharmProjects/CS221_Milestone/venv/lib/python3.8/site-packages/datasets/utils/deprecation_utils.py", line 46, in wrapper
    return deprecated_function(*args, **kwargs)
  File "/Users/sudharsansundar/PycharmProjects/CS221_Milestone/venv/lib/python3.8/site-packages/datasets/load.py", line 1680, in load_metric
    metric_cls = import_main_class(metric_module, dataset=False)
  File "/Users/sudharsansundar/PycharmProjects/CS221_Milestone/venv/lib/python3.8/site-packages/datasets/load.py", line 114, in import_main_class
    module = importlib.import_module(module_path)
  File "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1014, in _gcd_import
  File "<frozen importlib._bootstrap>", line 991, in _find_and_load
  File "<frozen importlib._bootstrap>", line 975, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 671, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 779, in exec_module
  File "<frozen importlib._bootstrap_external>", line 916, in get_code
  File "<frozen importlib._bootstrap_external>", line 846, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/Users/sudharsansundar/.cache/huggingface/modules/datasets_modules/metrics/token_edit_distance/57a97721c6d58801aa97e141e81b107f974896263f5e67b72dd40f97c424ddfe/token_edit_distance.py", line 52
    @datasets.utils.file_utils.add_start_docstrings(_DESCRIPTION, _KWARGS_DESCRIPTION)
    ^
IndentationError: expected an indented block